Add dateutil library to requirements.txt and create css file

--- a/templates/rss_reader/landing_page.html
+++ b/templates/rss_reader/landing_page.html
@@ -7,7 +7,7 @@
     <div class="container">
         {% for el in contents %}
             <div class="card">
-                <img src="{{ el.channel.image }}" alt="{{ el.channel.name }}">
+                <img src="{{ el.channel.image }}" alt="{{ el.channel.name }}"/>
                 <h3>{{ el.title }}</h3>
                 <p>{{ el.description }}</p>
                 <p><a href="{{ el.link }}">Check It!</a></p>
